# pipelinin

./: README.md
.github/workflows/: cmake-build.yml  nightly-build.yml  rust-build.yml
cpp/: CMakeLists.txt  CMakePresets.json  dependencies.cmake
cpp/tests/: CMakeLists.txt  main.cpp
golang/: Makefile  go.mod
golang/cmd/app/: main.go
golang/lib/: lib.go  lib_test.go
rust/: Cargo.toml
rust/app/src/: main.rs
rust/lib/: Cargo.toml
rust/lib/src/: lib.rs
rust/src/: main.rs
